(dirs lib test quickjs demo)

(library
 (name libregexp)
 (public_name regexp.libregexp)
 (libraries integers)
 (foreign_archives quickjs/quickjs)
 (ctypes
  (external_library_name libregexp)
  (headers
   (include "libregexp.h"))
  (build_flags_resolver
   (vendored
    (c_flags "-Iquickjs")))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(subdir
 quickjs
 (copy_files ../shims.c)
 (foreign_library
  (archive_name quickjs)
  (language c)
  (names libregexp cutils libunicode shims)))
