(dirs lib test quickjs demo docs)

(documentation
 (package quickjs)
 (mld_files index))

(library
 (name bindings)
 (public_name quickjs.bindings)
 (libraries integers)
 (foreign_archives quickjs/quickjs)
 (ctypes
  (external_library_name libregexp)
  (headers
   (include "libregexp.h"))
  (build_flags_resolver
   (vendored
    (c_flags "-Iquickjs")))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C))
 (foreign_stubs
  (language c)
  (names shims)))

(subdir
 quickjs
 (foreign_library
  (archive_name quickjs)
  (language c)
  (names libregexp libunicode cutils)))
