(dirs lib test test262 quickjs demo docs)

(documentation
 (package quickjs)
 (mld_files index))

(library
 (name bindings)
 (public_name quickjs.bindings)
 (libraries integers)
 (foreign_archives quickjs/quickjs)
 (ctypes
  (external_library_name libregexp)
  (headers
   (preamble "#include \"cutils.h\"\n#include \"libregexp.h\"\n#include \"libunicode.h\"\n#include \"shims.h\""))
  (build_flags_resolver
   (vendored
    (c_flags "-Iquickjs")))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(subdir
 quickjs
 (copy_files ../shims.c)
 (copy_files ../shims.h))

(subdir
 quickjs
 (foreign_library
  (archive_name quickjs)
  (language c)
  (names libregexp libunicode cutils shims)))
