(include_subdirs qualified)

(library
 (name alcotest_extra)
 (libraries alcotest quickjs)
 (modules alcotest_extra))

(test
 (name test262)
 (libraries alcotest quickjs alcotest_extra integers)
 (modules :standard \ alcotest_extra)
 (flags
  (:standard -open Alcotest_extra))
 (enabled_if
  (<> %{architecture} s390x)))
